<resources>
    <string name="app_name">BdBooking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_booking_for_water">BookingForWater</string>
    <string name="title_activity_booking_for_open_door">BookingForOpenDoor</string>
    <string name="title_activity_report_error">ReportErrorActivity</string>
    <string name="title_activity_login_fragment">LoginFragment</string>
    
	<string name="nurse">保姆</string>   
	<string name="housekeeping">家政</string> 
	<string name="procte">保洁</string>  
	<string name="hourly">小时工</string>
	<string name="select_address">请选择服务小区</string>
	<string name="drain">管道疏通</string>
	<string name="electric_circuit">电路维修</string>
	<string name="replacing_lamp">更换灯具</string>
	<string name="lock_repair">开锁换修</string>
	<string name="submit_booking">提交预订</string>
	<string name="cancel_booking">取消预订</string>
    
</resources>
